# semi

./: .gitignore  CMakeLists.txt  metadata_index.json  sites_catalog.json
build-cli/: CMakeCache.txt  Makefile  cmake_install.cmake
build-cli/juce_port/: Makefile  cmake_install.cmake
juce_port/: CMakeLists.txt  README.md
juce_port/Source/: Main.cpp  MainComponent.cpp  MainComponent.h  MetadataView.cpp  MetadataView.h  PreviewModels.cpp  PreviewModels.h  SanctSoundClient.cpp  SanctSoundClient.h  Utilities.cpp  Utilities.h  cli_main.cpp
juce_port/cli/: CMakeLists.txt  main_cli.cpp  sanctsound_cli.cpp
offline_data/: product_groups.json
offline_data/audio_index/: ci01__sanctsound_ci01_02_bluewhale.json
offline_data/gcs/noaa-passive-bioacoustic/sanctsound/products/detections/ci01/sanctsound_ci01_02_bluewhale/: SanctSound_CI01_02_bluewhale_events.csv
sanctsound_gui/: __init__.py  __main__.py  audio_listing.py  clipper.py  config.py  csv_parsers.py  metadata.py  products.py  runs.py  shell.py  sites.py  timeparse.py
sanctsound_gui/gui/: app.py
tests/: expected_ci01_02_bluewhale.txt
